# byggesak-feed

./: .gitignore  config.yaml  pyproject.toml
.github/workflows/: feed.yml
src/byggesak_feed/: __main__.py  cli.py  client.py  config.py  feed.py  filters.py  state.py
